--- a/css/style.css
+++ b/css/style.css
@@ -1,28 +1,117 @@
-* {
-  transition: .2s;
+@font-face {
+    font-family: 'raleway';
+    src: url('../fonts/webfont/raleway-regular-webfont.eot');
+    src: url('../fonts/webfont/raleway-regular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/webfont/raleway-regular-webfont.woff') format('woff'),
+         url('../fonts/webfont/raleway-regular-webfont.ttf') format('truetype'),
+         url('../fonts/webfont/raleway-regular-webfont.svg#ralewayregular') format('svg');
+    font-weight: normal;
+    font-style: normal;}
+@font-face {
+    font-family: 'raleway';
+    src: url('../fonts/webfont/raleway-extrabold-webfont.eot');
+    src: url('../fonts/webfont/raleway-extrabold-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/webfont/raleway-extrabold-webfont.woff') format('woff'),
+         url('../fonts/webfont/raleway-extrabold-webfont.ttf') format('truetype'),
+         url('../fonts/webfont/raleway-extrabold-webfont.svg#ralewayextrabold') format('svg');
+    font-weight: bold;
+    font-style: normal;
+}
+
+html {
+  margin:0;
+  padding:0;
+
+}
+h2 {
+  text-align: right;
+  font-weight: bold;
+  font-size: 3em;
+}
+p {
+  padding-top: 1em;
+  padding-bottom: 0.3em;
 }
 body{
   background: #e8fff9;
-  color: black;
+  color: #189293;
   font-family: raleway;
+  font-weight: normal;
+}
+.vert_bot{
+  padding-top: 3em;
+}
+.spacer{
+  margin-top: 3em;
+}
+.spacerHalf{
+  margin-top:1.5em;
+}
+.bold {
+  font-weight: bold;
+}
+.drop-menu a {
+  text-decoration: none;
+  color: white;
 }
 .mast {
   background-color: rgba(24,146,147,1);
-  width: 100%;
-  margin: 0;
+  width: 110%;
+  height: auto;
+  margin-bottom: 0;
+ 
 }
 .menu-glyph {
   font-size: 2em;
-  margin-top: -1em;
+  margin-top: -1.4em;
+  color: #fff;
 }
-
-
+.drop-menu{
+  text-align: right;
+  font-weight: bold;
+  font-size: 3em;
+  color: #fff;
+  
+}
+.testimony{
+  height: 20em;
+}
+.drop-menu-active{
+  text-align: left;
+}
+.drop-menu1{
+  background-image: url(../assets/menu/booking.png);
+  margin-top:0.1em;
+  margin-bottom: 0.1em;
+}
+.drop-menu2{
+  background-image: url(../assets/menu/travelblog.png);
+  margin-bottom: 0.1em;
+}
+.drop-menu3{
+  background-image: url(../assets/menu/FF.png);
+  margin-bottom: 0.1em;
+}
+.drop-menu4{
+  background-image: url(../assets/menu/pledge.png);
+  margin-bottom: 0.1em;
+}
+.text-input{
+  background-color: #b6f1ef;
+  border-radius: 25px;
+  border-width: 0;
+  color: #189293;
+  font-size: 1.3em;
+}
+.input_round{
+  border-radius: 25px;
+}
 
 
 @media (min-width: 1000px){
   body {
      background-image: url(../assets/tile.png);
-     color: white;
+     color: #189293;
   }
 
 }
